# htop_killer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh
include/collectors/: collector_engine.hpp  cpu_collector.hpp  lan_collector.hpp  linux_cpu_collector.hpp  linux_disk_collector.hpp  linux_lan_collector.hpp  linux_mem_collector.hpp  linux_net_collector.hpp  linux_network_devices_collector.hpp  linux_process_collector.hpp  network_scanner.hpp
include/core/: data_store.hpp  history.hpp  network_device.hpp  ring_buffer.hpp  types.hpp
include/ui/: app.hpp  cpu_panel.hpp  format.hpp  graph_widget.hpp  header_widget.hpp  help_overlay.hpp  lan_panel.hpp  mem_panel.hpp  net_disk_panel.hpp  netdevs_panel.hpp  process_panel.hpp  theme.hpp
src/: main.cpp
src/collectors/: collector_engine.cpp  linux_cpu_collector.cpp  linux_disk_collector.cpp  linux_lan_collector.cpp  linux_mem_collector.cpp  linux_net_collector.cpp  linux_process_collector.cpp
